--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Drag and Drop</title>
+    <title>TaskMate - Drag & Drop Organizer</title>
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="main-title">Task Board</h1>
+    <h1 class="main-title"><img src="logoDark.png" width="250px" /></h1>
     <div class="drag-container">
       <ul class="drag-list">
-        <!-- backlog column -->
+        <!-- Backlog column -->
         <li class="drag-column backlog-column">
           <span class="header">
             <h1>Backlog</h1>
@@ -21,8 +21,6 @@
             <ul class="drag-item-list" id="backlog-list">
               <li class="drag-item">Item 1</li>
               <li class="drag-item">Item 2</li>
-              <li class="drag-item">Item 3</li>
-              <li class="drag-item">Item 4</li>
             </ul>
           </div>
 
@@ -40,6 +38,8 @@
             </div>
           </div>
         </li>
+
+        <!-- Progress column -->
         <li class="drag-column progress-column">
           <span class="header">
             <h1>Progress</h1>
@@ -49,8 +49,6 @@
             <ul class="drag-item-list" id="progress-list">
               <li class="drag-item">Item 1</li>
               <li class="drag-item">Item 2</li>
-              <li class="drag-item">Item 3</li>
-              <li class="drag-item">Item 4</li>
             </ul>
           </div>
 
@@ -68,6 +66,8 @@
             </div>
           </div>
         </li>
+
+        <!-- Complete column -->
         <li class="drag-column complete-column">
           <span class="header">
             <h1>Complete</h1>
@@ -77,8 +77,6 @@
             <ul class="drag-item-list" id="complete-list">
               <li class="drag-item">Item 1</li>
               <li class="drag-item">Item 2</li>
-              <li class="drag-item">Item 3</li>
-              <li class="drag-item">Item 4</li>
             </ul>
           </div>
 
@@ -96,6 +94,8 @@
             </div>
           </div>
         </li>
+
+        <!-- On Hold column -->
         <li class="drag-column on-hold-column">
           <span class="header">
             <h1>On-hold</h1>
@@ -105,8 +105,6 @@
             <ul class="drag-item-list" id="on-hold-list">
               <li class="drag-item">Item 1</li>
               <li class="drag-item">Item 2</li>
-              <li class="drag-item">Item 3</li>
-              <li class="drag-item">Item 4</li>
             </ul>
           </div>
 
