updated dom with items from local storage functionality added

--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
           </span>
           <!-- Backlog content -->
           <div id="backlog-content" class="custom-scroll">
-            <ul class="drag-item-list" id="backlog-list">
-              <li class="drag-item">Item 1</li>
-              <li class="drag-item">Item 2</li>
-            </ul>
+            <ul class="drag-item-list" id="backlog-list"></ul>
           </div>
 
           <!-- Add button group -->
@@ -46,10 +43,7 @@
           </span>
           <!-- progress content -->
           <div id="progress-content" class="custom-scroll">
-            <ul class="drag-item-list" id="progress-list">
-              <li class="drag-item">Item 1</li>
-              <li class="drag-item">Item 2</li>
-            </ul>
+            <ul class="drag-item-list" id="progress-list"></ul>
           </div>
 
           <!-- Add button group -->
@@ -74,10 +68,7 @@
           </span>
           <!-- complete content -->
           <div id="complete-content" class="custom-scroll">
-            <ul class="drag-item-list" id="complete-list">
-              <li class="drag-item">Item 1</li>
-              <li class="drag-item">Item 2</li>
-            </ul>
+            <ul class="drag-item-list" id="complete-list"></ul>
           </div>
 
           <!-- Add button group -->
@@ -102,10 +93,7 @@
           </span>
           <!-- On-Hold content -->
           <div id="on-hold-content" class="custom-scroll">
-            <ul class="drag-item-list" id="on-hold-list">
-              <li class="drag-item">Item 1</li>
-              <li class="drag-item">Item 2</li>
-            </ul>
+            <ul class="drag-item-list" id="on-hold-list"></ul>
           </div>
 
           <!-- Add button group -->
