--- a/index.html
+++ b/index.html
@@ -2,141 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TaskMate - Drag & Drop Organizer</title>
-    <link rel="icon" type="image/png" href="favicon.png" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/wave.css" />
   </head>
   <body>
-    <h1 class="main-title"><img src="logoDark.png" width="250px" /></h1>
-    <div class="drag-container">
-      <ul class="drag-list">
-        <!-- Backlog column -->
-        <li class="drag-column backlog-column">
-          <span class="header">
-            <h1>Backlog</h1>
-          </span>
-          <!-- Backlog content -->
-          <div id="backlog-content" class="custom-scroll">
-            <ul
-              class="drag-item-list"
-              id="backlog-list"
-              ondrop="drop(event)"
-              ondragover="allowDrop(event)"
-              ondragenter="dragEnter(0)"
-            ></ul>
-          </div>
-
-          <!-- Add button group -->
-          <div class="add-btn-group">
-            <div class="add-btn" onclick="showInputBox(0)">
-              <span class="plus-sign">+</span>
-              <span>Add Item</span>
-            </div>
-            <div class="add-btn solid" onclick="hideInputBox(0)">
-              <span>Save Item</span>
-            </div>
-          </div>
-          <div class="add-container">
-            <div class="add-item" contenteditable="true"></div>
-          </div>
-        </li>
-
-        <!-- Progress column -->
-        <li class="drag-column progress-column">
-          <span class="header">
-            <h1>Progress</h1>
-          </span>
-          <!-- progress content -->
-          <div id="progress-content" class="custom-scroll">
-            <ul
-              class="drag-item-list"
-              id="progress-list"
-              ondrop="drop(event)"
-              ondragover="allowDrop(event)"
-              ondragenter="dragEnter(1)"
-            ></ul>
-          </div>
-
-          <!-- Add button group -->
-          <div class="add-btn-group">
-            <div class="add-btn" onclick="showInputBox(1)">
-              <span class="plus-sign">+</span>
-              <span>Add Item</span>
-            </div>
-            <div class="add-btn solid" onclick="hideInputBox(1)">
-              <span>Save Item</span>
-            </div>
-          </div>
-          <div class="add-container">
-            <div class="add-item" contenteditable="true"></div>
-          </div>
-        </li>
-
-        <!-- Complete column -->
-        <li class="drag-column complete-column">
-          <span class="header">
-            <h1>Complete</h1>
-          </span>
-          <!-- complete content -->
-          <div id="complete-content" class="custom-scroll">
-            <ul
-              class="drag-item-list"
-              id="complete-list"
-              ondrop="drop(event)"
-              ondragover="allowDrop(event)"
-              ondragenter="dragEnter(2)"
-            ></ul>
-          </div>
-
-          <!-- Add button group -->
-          <div class="add-btn-group">
-            <div class="add-btn" onclick="showInputBox(2)">
-              <span class="plus-sign">+</span>
-              <span>Add Item</span>
-            </div>
-            <div class="add-btn solid" onclick="hideInputBox(2)">
-              <span>Save Item</span>
-            </div>
-          </div>
-          <div class="add-container">
-            <div class="add-item" contenteditable="true"></div>
-          </div>
-        </li>
-
-        <!-- On Hold column -->
-        <li class="drag-column on-hold-column">
-          <span class="header">
-            <h1>On-hold</h1>
-          </span>
-          <!-- On-Hold content -->
-          <div id="on-hold-content" class="custom-scroll">
-            <ul
-              class="drag-item-list"
-              id="on-hold-list"
-              ondrop="drop(event)"
-              ondragover="allowDrop(event)"
-              ondragenter="dragEnter(3)"
-            ></ul>
-          </div>
-
-          <!-- Add button group -->
-          <div class="add-btn-group">
-            <div class="add-btn" onclick="showInputBox(3)">
-              <span class="plus-sign">+</span>
-              <span>Add Item</span>
-            </div>
-            <div class="add-btn solid" onclick="hideInputBox(3)">
-              <span>Save Item</span>
-            </div>
-          </div>
-          <div class="add-container">
-            <div class="add-item" contenteditable="true"></div>
-          </div>
-        </li>
-      </ul>
+    <div class="container">
+      <header class="content">
+        <h1 class="title">Task<span>Mate</span></h1>
+        <div class="text">
+          TaskMate is a simple drag and drop organizer that helps you organize your life. All of
+          your tasks are saved on your browswer automatically , just update the status of your tasks
+          by dragging it into the relevant column.
+        </div>
+      </header>
+      <footer class="footer">
+        <a href="app.html" class="ripple">Try it now</a>
+      </footer>
+      <div class="wave"></div>
+      <div class="wave wave2"></div>
+      <div class="wave wave3"></div>
     </div>
-    <!-- Script -->
-    <script src="script.js"></script>
+
+    <script src="scripts/wave.js"></script>
   </body>
 </html>
